@@ -32,6 +32,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 476320  Build failure with GCC
 476535  Difference in allocation size for massif/tests/overloaded-new between
         clang++/libc++ and g++/libstdc++
+476548  valgrind 3.22.0 fails on assertion when loading debuginfo file produced by mold
 476708  valgrind-monitor.py regular expressions should use raw strings
 476780  Extend strlcat and strlcpy wrappers to GNU libc
 476787  Build of Valgrind 3.21.0 fails when SOLARIS_PT_SUNDWTRACE_THRP is
